# system.drawing

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example1.cpp
include/system.drawing/: system.drawing.bitmap.h  system.drawing.color.h  system.drawing.graphicsunit.h  system.drawing.image.h  system.drawing.point.h  system.drawing.pointf.h  system.drawing.rectangle.h  system.drawing.rectanglef.h  system.drawing.rotatefliptype.h  system.drawing.size.h  system.drawing.sizef.h
include/system.drawing/imaging/: system.drawing.imaging.bitmapdata.h  system.drawing.imaging.colorpalette.h  system.drawing.imaging.encoderparameter.h  system.drawing.imaging.encoderparameters.h  system.drawing.imaging.imagecodecinfo.h  system.drawing.imaging.imageformat.h  system.drawing.imaging.imagelockmode.h  system.drawing.imaging.pixelformat.h
src/: Bitmap.cpp  CMakeLists.txt  Color.cpp  Image.cpp  Point.cpp  PointF.cpp  Rectangle.cpp  RectangleF.cpp  Size.cpp  SizeF.cpp  stb.cpp
src/Imaging/: BitmapData.cpp  ImageFormat.cpp
